<!--
  ~     Copyright (c) 2019, 2020 by w4v3 <support.w4v3+hypercampus@protonmail.com>
  ~
  ~     This file is part of HyperCampus.
  ~
  ~     HyperCampus is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     HyperCampus is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with HyperCampus.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- App bar -->
    <string name="app_name">HyperCampus</string>
    <string name="action_set">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_exp">Export</string>
    <string name="action_help">Help</string>
    <string name="action_del">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Reenable</string>
    <string name="action_cram">Full review</string>
    <string name="action_stats">Statistics</string>
    <string name="action_info">Info file</string>
    <string name="title_review">Review</string>
    <string name="title_settings">Settings</string>
    <string name="title_edit_card">Edit card</string>

    <!-- Courses, Lessons, Cards -->
    <string name="course">course</string>
    <string name="lesson">lesson</string>
    <string name="card">card</string>
    <string name="course_symbol_hint">📚</string>
    <string name="course_label_hint">Title</string>
    <string name="course_newperday_hint">10</string>
    <string name="newperday_add_sign">+</string>
    <string name="newperday_per_day">/day</string>
    <string name="lesson_symbol_hint">📓</string>
    <string name="lesson_label_hint">Title</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="wrong">wrong</string>
    <string name="right">right</string>
    <string name="familiarity">familiarity</string>
    <string name="unfamiliar">completely unfamiliar</string>
    <string name="familiar">very familiar</string>
    <string name="show_answer">Show answer</string>
    <string name="no_more_due">No more cards due today!</string>
    <string name="return_button">Return</string>
    <string name="due_new">%s due | %s new</string>
    <string name="due">%s due</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="new_">New %s</string>
    <string name="are_you_sure">Are you sure? This cannot be undone.</string>
    <string name="ok">OK</string>
    <string name="edit_">Edit %s</string>
    <string name="edit_dialog">Edit</string>
    <plurals name="deleting_">
        <item quantity="one">Deleting %2$s</item>
        <item quantity="other">Deleting %1$d %2$ss</item>
    </plurals>
    <plurals name="export_">
        <item quantity="one">Export %2$s</item>
        <item quantity="other">Export %1$d %2$ss</item>
    </plurals>
    <string name="add_image">Add image</string>
    <string name="add_audio">Add audio</string>
    <string name="import_dialog">Would you like to update cards in existing courses with the same index? Your learning progress will not be lost, but information from overwritten cards cannot be recovered.</string>
    <string name="import_overwrite">Overwrite</string>
    <string name="import_addnew">Add new courses instead</string>
    <string name="title_import">Importing collection</string>
    <string name="stats_numcards">#cards</string>
    <string name="stats_learned_new_disabled">#learned/new/disabled</string>
    <string name="stats_perc_learned_new_disabled">%learned/new/disabled</string>
    <string name="stats_due">due</string>
    <string name="stats_rho_sigma">sigma</string>
    <string name="stats_hc_1">alpha/beta/sigma_max</string>
    <string name="stats_sm_2">E factor</string>

    <!-- Preferences -->
    <string name="srs_header">Spaced Repetition System</string>
    <string name="sgf_header">Smart Game Format</string>
    <string name="other_header">Other</string>
    <string name="algo_title">Algorithm</string>
    <string name="algo_sm">SuperMemo 2</string>
    <string name="algo_hc">HyperCampus 1 (recommended)</string>
    <string name="ri_title">Retention Index</string>
    <string name="newcards_title">New cards learning mode</string>
    <string name="newcards_learnt">treat as already learnt (default)</string>
    <string name="newcards_dropout">self-paced dropout</string>
    <string name="newcards_info">show info file</string>
    <string name="newcards_info_dropout">both info file and dropout</string>
    <string name="newcardorder_title">New cards learning order</string>
    <string name="newcardorder_course">Course order</string>
    <string name="newcardorder_random">Random</string>
    <string name="showvariations_title">Show variations</string>
    <string name="showvariations_file">Use settings from SGF file (default)</string>
    <string name="showvariations_never">Never</string>
    <string name="showvariations_always">Always</string>
    <string name="interactionmode_title">Interaction mode</string>
    <string name="interactionmode_freeplay">Free play</string>
    <string name="interactionmode_counter">Automatic countermove</string>
    <string name="interactionmode_disable">Disable</string>
    <string name="showinfo_title">Show info text</string>
    <string name="showbuttons_title">Show undo/redo buttons</string>
    <string name="colortheme_title">Color theme</string>
    <string name="colortheme_hypercampus">HyperCampus</string>
    <string name="colortheme_blackwhite">Black and White</string>
    <string name="font_size_title">Card font size</string>
    <string name="font_size_tiny">tiny</string>
    <string name="font_size_small">small</string>
    <string name="font_size_medium">medium</string>
    <string name="font_size_large">large</string>
    <string name="font_size_huge">huge</string>
    <string name="remove_media_title">Remove unused media …</string>
    <string name="about_title">About …</string>
    <string name="licence_title">Library licences …</string>
    <string name="change_to_eng">English as default language</string>

    <string name="about">HyperCampus uses a machine learning based spaced repetition algorithm to determine when to show a card the next time based on your grading. For more information on how and why it works, please visit the <a href="https://www.github.com/w4v3/hypercampus">project github page.</a></string>

    <!-- Intro -->
    <string name="welcome">Welcome to the HyperCampus app! Use it to learn whatever you want. Would you like an introduction?</string>
    <string name="start_tour">Start tour</string>
    <string name="no_thx">Nope</string>
    <string name="got_it">GOT IT</string>
    <string name="intro1">A flashcard deck is called a \"course\". Tap here to add a new course</string>
    <string name="intro2">Once you have added flashcards to your course, I manage which cards you should review each day. Tap here to review a single course …</string>
    <string name="intro3">… or use the HyperCampus button to review due cards from all courses</string>
    <string name="intro4">Tap on a course to open it</string>
    <string name="intro5">Each course consists of lessons, which can be added and reviewed just like courses. Tap on a lesson to see all of its flashcards</string>
    <string name="intro6">Each card has a question …</string>
    <string name="intro7">… and an answer. Add new cards with the add button or tap on an existing card to edit it</string>
    <string name="intro8">Now use the HyperCampus button to check out how reviewing your cards works</string>
    <string name="intro9">During your (hopefully) daily review, I will present some questions from your collection</string>
    <string name="intro10">Try to find the answer, and tap this button</string>
    <string name="intro11">I will reveal the answer, and you have to judge how well you knew it</string>
    <string name="intro12">Tap right if you knew it and left if you didn\'t.</string>
    <string name="intro13">Also, please indicate how familiar you feel with the item, regardless of whether you got it correct right now or not. That\'s all!</string>

    <!-- Snackbar messages -->
    <string name="fnf_exception">Could not write to file: File not found.</string>
    <string name="io_exception">Something went wrong. Make sure external storage is available.</string>
    <string name="exp_success">Export successful!</string>
    <string name="imp_success">Import successful!</string>
    <string name="not_recognized_exception">Cannot recognize file type. Wrong extension?</string>
    <string name="delete_unused_success">Successfully deleted unused media!</string>
    <string name="dismiss">dismiss</string>
    <string name="info_file_dialog">Info file</string>
    <string name="snack_noinfo">No info file found for this card.</string>
</resources>
