<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/standard_menu_group">
        <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/action_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />

        <!--<item
            android:id="@+id/action_to_stats"
            android:title="@string/action_stat"
            android:icon="@drawable/ic_insert_chart_white_24dp"
            android:menuCategory="secondary"
            app:showAsAction="ifRoom"/>-->

        <item
            android:id="@+id/app_bar_add"
            android:icon="@drawable/ic_add_circle_outline_white_24dp"
            android:title="@string/action_add"
            app:showAsAction="ifRoom" />

        <item
            android:icon="@drawable/ic_settings_white_24dp"
            android:menuCategory="secondary"
            android:title="@string/action_set"
            app:showAsAction="ifRoom" />

    </group>
</menu>
