<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editCourse"
            type="onion.w4v3xrmknycexlsd.app.hypercampus.data.Course" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/label_short"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:hint="@string/course_symbol_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="4"
            android:text="@={editCourse.symbol}"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/label_full"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/course_label_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:text="@={editCourse.name}"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/label_short"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_per_day"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:hint="@string/course_newperday_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@={``+editCourse.new_per_day}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newperday_add_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_per_day"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/newperday_per_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>