<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="currentCard"
            type="onion.w4v3xrmknycexlsd.app.hypercampus.Card" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Srs">


        <LinearLayout
            android:id="@+id/answer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:visibility="invisible"
            tools:visibility="visible">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/answer_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:cardElevation="0dp"
                app:strokeColor="?colorSecondary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/answer" />

                <TextView
                    android:id="@+id/answer_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@{currentCard.answer}"
                    android:textAppearance="?textAppearanceBody1"
                    tools:text="YYY\nand ZZZ" />

            </com.google.android.material.card.MaterialCardView>

            <SeekBar
                android:id="@+id/grade_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:max="100"
                android:maxHeight="36dp"
                android:minHeight="36dp"
                android:progress="50"
                android:progressDrawable="@drawable/grade_selector"
                android:thumb="@drawable/grade_selector_thumb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/wrong"
                    android:src="@drawable/ic_close_white_24dp"
                    android:tint="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0"
                    android:contentDescription="@string/right"
                    android:src="@drawable/ic_check_white_24dp"
                    android:tint="?attr/colorSecondary" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/question_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:minHeight="200dp"
                app:cardElevation="0dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/question" />

                <TextView
                    android:id="@+id/question_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@{currentCard.question}"
                    android:textAppearance="?textAppearanceBody1"
                    tools:text="What is XXX?" />
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/show_answer_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="16dp"
                android:layout_weight="0"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/show_answer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_more_questions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="48dp"
            android:visibility="invisible"
            tools:visibility="visible">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorContrastDark"
                app:strokeWidth="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/no_more_due"
                    android:textAppearance="?textAppearanceBody2" />
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/return_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="16dp"
                android:layout_weight="0"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/return_button" />

        </LinearLayout>

    </FrameLayout>
</layout>